--- a/Portfolio-main/index.html
+++ b/Portfolio-main/index.html
@@ -233,12 +233,12 @@
         <div class="contact-form ">
             <div class="info-box ">
                 <i class='bx bxs-user'></i>
-                <span>Sudhanshu Sakhala</span>
+                <span>Tushar Bhansali</span>
             </div><br>
             <!-- Box 2 -->
             <div class="info-box ">
                 <i class='bx bxs-phone'></i>
-                <span>+91-7744869769</span>
+                <span>+91-9527025617</span>
             </div><br>
             
             <div class="info-box ">
